force-app/main/default/objects/MUSW__Bluebeam_Session_Setting__mdt/MUSW__Bluebeam_Session_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Bluebeam Session Setting</label>
    <pluralLabel>Bluebeam Sessions Settings</pluralLabel>
</CustomObject>