force-app/main/default/objects/MUSW__Bluebeam_Session_Setting__mdt/fields/MUSW__Bluebeam_File_Checkin_Counter_API_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Bluebeam_File_Checkin_Counter_API_Name__c</fullName>
    <label>File Checkin Counter Field API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>