force-app/main/default/objects/MUSW__Bluebeam_Session_Setting__mdt/fields/MUSW__Bluebeam_Session_Id_API_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Bluebeam_Session_Id_API_Name__c</fullName>
    <description>Field API Name where the BB Session Id value is to be stored in</description>
    <inlineHelpText>Field API Name where the BB Session Id value is to be stored in</inlineHelpText>
    <label>Session Id Field API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>