force-app/main/default/objects/MUSW__Bluebeam_Session_Setting__mdt/fields/MUSW__Session_Name_Definition__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Session_Name_Definition__c</fullName>
    <description>Format to use for Bluebeam Session Name. To include Field values, encase the Field API Name with {! }. Ex: {!Name}-Cycle {!MUSW__Cycle__c}</description>
    <inlineHelpText>Format to use for BB Session Name eg. {!MUSW__Milestone__c.Name}</inlineHelpText>
    <label>Session Name Definition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>