force-app/main/default/objects/MUSW__Bluebeam_Session_Setting__mdt/fields/MUSW__Status_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Status_Field_API_Name__c</fullName>
    <label>Status Field API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>